added html template

--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Neerhoffsles</title>
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Titel</title>
 </head>
 <body>
-    <h1>Test</h1>
-    
+    <nav id="navigation">
+        <a href="index.html"><img src="" alt="logo"></a>
+        <ul id="burger-container">
+            <li id="burgermenu">
+                <div></div>
+                <div></div>
+                <div></div>
+            </li>
+        </ul>
+        <ul id="nav-container">
+            <a href="index.html">
+                <li id="current-page">
+                    <span>Home</span>
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <span>Placeholder</span>
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <span>Placeholder</span>
+                </li>
+            </a>
+			<a href="">
+                <li>
+                    <span>Placeholder</span>
+                </li>
+            </a>
+            <a href="">
+                <li id="float-right">
+                    <span>Contact</span>
+                </li>
+            </a>
+        </ul>
+    </nav>
+    <main id="content">
+        <!-- plaats hier de content van de pagina-->
+    </main>
+    <footer id="footer">
+        <div id="developer-info">
+            <span>Copyright</span>
+            <a href="">Naam</a>
+            <span>2018</span>
+        </div>
+    </footer>
 </body>
+<script src="js/general.script.js"></script>
 </html>
