added nav content and style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <nav id="navigation">
-        <a href="index.html"><img src="" alt="logo"></a>
         <ul id="burger-container">
             <li id="burgermenu">
                 <div></div>
@@ -26,17 +25,27 @@
             </a>
             <a href="">
                 <li>
-                    <span>Placeholder</span>
+                    <span>Rendement</span>
                 </li>
             </a>
             <a href="">
                 <li>
-                    <span>Placeholder</span>
+                    <span>Toekomst</span>
                 </li>
             </a>
 			<a href="">
                 <li>
-                    <span>Placeholder</span>
+                    <span>Buitenland</span>
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <span>Markt</span>
+                </li>
+            </a>
+            <a href="">
+                <li>
+                    <span>Conclusie</span>
                 </li>
             </a>
             <a href="">
