--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </li>
         </ul>
         <ul id="nav-container">
-            <a href="index.html">
+            <a href="../">
                 <li id="current-page">
                     <span>Home</span>
                 </li>
