added rendement page

--- a/rendement/index.html
+++ b/rendement/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
+    <title>Rendement</title>
 </head>
 <body>
     <nav id="navigation">
@@ -17,32 +17,32 @@
             </li>
         </ul>
         <ul id="nav-container">
-            <a href="">
+            <a href="../">
                 <li id="current-page">
                     <span>Home</span>
                 </li>
             </a>
-            <a href="rendement">
+            <a href="">
                 <li>
                     <span>Rendement</span>
                 </li>
             </a>
-            <a href="toekomst">
+            <a href="../toekomst">
                 <li>
                     <span>Toekomst</span>
                 </li>
             </a>
-			<a href="buitenland">
+			<a href="../buitenland">
                 <li>
                     <span>Buitenland</span>
                 </li>
             </a>
-            <a href="markt">
+            <a href="../markt">
                 <li>
                     <span>Markt</span>
                 </li>
             </a>
-            <a href="conclusie">
+            <a href="../conclusie">
                 <li>
                     <span>Conclusie</span>
                 </li>
