--- a/rendement/index.html
+++ b/rendement/index.html
@@ -65,5 +65,5 @@
         </div>
     </footer>
 </body>
-<script src="js/general.script.js"></script>
+<script src="../js/general.script.js"></script>
 </html>
