--- a/index.html
+++ b/index.html
@@ -65,5 +65,13 @@
         </div>
     </footer>
 </body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114662443-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114662443-2');
+</script>
 <script src="js/general.script.js"></script>
 </html>
