--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
         </ul>
     </nav>
     <main id="content">
-        <!-- plaats hier de content van de pagina-->
+        <header id="header">
+            <h1>Professionele tekst</h1>
+            <img src="img/header.jpg">
+        </header>
     </main>
     <footer id="footer">
         <div id="developer-info">
