added moving sun

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             <h1>Professionele tekst</h1>
             <img src="img/header.jpg">
         </header>
+        <div id="cur-sun-energie">
+            <div id="moving-sun">
+                <img src="img/sun.png">
+            </div>
+        </div>
     </main>
     <footer id="footer">
         <div id="developer-info">
@@ -76,5 +81,6 @@
 
   gtag('config', 'UA-114662443-2');
 </script>
-<script src="js/general.script.js"></script>
+<script src="js/general.js"></script>
+<script src="js/cur-sun.js"></script>
 </html>
