--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div id="moving-sun">
                 <img src="img/sun.png">
             </div>
+            <img id="solarp" src="img/solarpanel.png">
         </div>
     </main>
     <footer id="footer">
