fixed script link

--- a/rendement/index.html
+++ b/rendement/index.html
@@ -73,5 +73,5 @@
 
   gtag('config', 'UA-114662443-2');
 </script>
-<script src="../js/general.script.js"></script>
+<script src="../js/general.js"></script>
 </html>
