added all pages

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
         <ul id="nav-container">
             <a href="">
-                <li id="current-page">
+                <li class="current-page">
                     <span>Home</span>
                 </li>
             </a>
@@ -57,9 +57,11 @@
     <main id="content">
         <header id="header">
             <h1>Professionele tekst</h1>
-            <img src="img/header.jpg">
+            <img class="mobile"src="img/header-mob.jpg">
+            <img class="desktop"src="img/header-desk.jpg">
         </header>
         <div id="cur-sun-energie">
+            <h2>Huidige opbrengst</h2>
             <div id="moving-sun">
                 <img src="img/sun.png">
             </div>
