--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
-    <title>Rendement</title>
+    <title>Markt</title>
 </head>
 <body>
     <nav id="navigation">
@@ -22,8 +22,8 @@
                     <span>Home</span>
                 </li>
             </a>
-            <a href="">
-                <li class="current-page">
+            <a href="../rendement">
+                <li>
                     <span>Rendement</span>
                 </li>
             </a>
@@ -48,7 +48,7 @@
                 </li>
             </a>
             <a href="">
-                <li id="float-right">
+                <li id="float-right" class="current-page">
                     <span>Contact</span>
                 </li>
             </a>
