--- a/toekomst/index.html
+++ b/toekomst/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
-    <title>Rendement</title>
+    <title>Toekomst</title>
 </head>
 <body>
     <nav id="navigation">
@@ -22,13 +22,13 @@
                     <span>Home</span>
                 </li>
             </a>
-            <a href="">
-                <li class="current-page">
+            <a href="../rendement">
+                <li>
                     <span>Rendement</span>
                 </li>
             </a>
-            <a href="../toekomst">
-                <li>
+            <a href="">
+                <li class="current-page">
                     <span>Toekomst</span>
                 </li>
             </a>
