edited inleiding voor site

--- a/index.html
+++ b/index.html
@@ -56,10 +56,17 @@
     </nav>
     <main id="content">
         <header id="header">
-            <h1>Professionele tekst</h1>
+            <h1>Duurzame Energie</h1>
             <img class="mobile"src="img/header-mob.jpg">
             <img class="desktop"src="img/header-desk.jpg">
         </header>
+	<div id="inleiding">
+		<p>Volgens veel critici zou de wereld door onze eigen fouten en uitputting van de aarde vergaan of tenminste ons ras uitsterven.
+		Er zijn veel oplossingen, maar niemand weet de perfecte. Duurzame energie zal al een hele stap de goede richting zijn.
+		Omdat je energie gebruikt die geen CO2 die diep in de aarde zit weer naar boven haalt en het ‘huidige’ broeikast effect dat “nu al erg aan het stijgen is” verder stimuleren.
+		Vandaar dat er steeds meer duurzame energie en duurzame producten op de markt komen. Zelfs op het particuliere niveau.
+		</p>
+	</div>
         <div id="cur-sun-energie">
             <h2>Huidige opbrengst</h2>
             <div id="moving-sun">
@@ -71,7 +78,7 @@
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="">Naam</a>
+            <a href="">Gianni, Marloes en Anne Fleur (en so naar Oscar voor deze website)</a>
             <span>2018</span>
         </div>
     </footer>
