--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<div id="inleiding">
 		<p>Volgens veel critici zou de wereld door onze eigen fouten en uitputting van de aarde vergaan of tenminste ons ras uitsterven.
 		Er zijn veel oplossingen, maar niemand weet de perfecte. Duurzame energie zal al een hele stap de goede richting zijn.
-		Omdat je energie gebruikt die geen CO2 die diep in de aarde zit weer naar boven haalt en het ‘huidige’ broeikast effect dat “nu al erg aan het stijgen is” verder stimuleren.
+		Omdat je energie gebruikt die geen CO2 die diep in de aarde zit weer naar boven haalt en het "huidige" broeikast effect dat "nu al erg aan het stijgen is" verder stimuleren.
 		Vandaar dat er steeds meer duurzame energie en duurzame producten op de markt komen. Zelfs op het particuliere niveau.
 		</p>
 	</div>
@@ -73,6 +73,7 @@
                 <img src="img/sun.png">
             </div>
             <img id="solarp" src="img/solarpanel.png">
+            <span id="current-sun"></span>
         </div>
     </main>
     <footer id="footer">
