nieuwe tekst erbij

--- a/index.html
+++ b/index.html
@@ -74,6 +74,25 @@
             </div>
             <img id="solarp" src="img/solarpanel.png">
         </div>
+	<div id="Uitleg">
+		<p>Duurzame energie op de huidige markt bestaat vooral, maar is niet gelimiteerd tot deze:
+
+				-Wind Kracht centrales
+				-Geothermische centrales
+				-Zonne-energie
+				-Zeestromingscentrales
+				-Waterkracht centrales
+				-Brandstof van door de mens geplante planten (zoals Biodiesel)
+
+		Aangezien de enige grote particuliere sector de zonne-energie is, gaan we voor zonne-energie.
+		Op deze website zou je informatie kunnen vinden voor zonne-energie en het aanleggen van zonnepanelen, vooral de kosten en opbrengsten.
+		We kijken niet naar de positieve veranderingen in de natuur maar naar het rendement van de panelen en ook of het het wel waard is in de huidige markt.
+		Met een toekomst verwachting of het nog in de toekomst te doen is.
+		Op het moment is er een positieve stijging in de markt van zonnepanelen en is er een soort van “hype” er omheen.
+		Deze hype is, als je kijkt naar de overheid, erg gestimuleerd. Vooral door de overheid. Maar is deze markt nog wel zo rendabel als het lijkt?
+		Wij zochten het uit en kwamen tot 1 conclusie.
+		</p>
+	</div>
     </main>
     <footer id="footer">
         <div id="developer-info">
