--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     </nav>
     <main id="content">
         <header id="header">
-            <h1>Duurzame Energie</h1>
+            <div id="header-text">
+                <h1>Duurzame Energie</h1>
+            </div>
             <img class="mobile"src="img/header-mob.jpg">
             <img class="desktop"src="img/header-desk.jpg">
         </header>
