--- a/toekomst/index.html
+++ b/toekomst/index.html
@@ -57,7 +57,8 @@
     <main id="content">
 		<div id="tekst">
 			<p> 
-			<br><br><br>
+			<br><br>
+			<h1> Toekomstverwachting </h1><br><br>
 			De toekomstverwachting van zonne-energie 
 			De toekomst van zonne-energie zit er rooskleurig uit. Zonnepanelen worden dus steeds rendabeler. Nu halen we ongeveer 20 procent van de energie uit zonnepanelen maar in 2030 is de schatting gedaan dat dat verdriedubbeld keer is. 
 			Er gaan ook stappen worden gezet door de zonne- energiesector. Ze willen in de toekomst dat zonnepanelen duurzamer worden en de prijs van de zonnepanelen nog zal blijf dalen. Dan krijgen we dus zonnepanelen die nog goedkoper zijn, waardoor je sneller je investering terug hebt. 
@@ -65,6 +66,7 @@
 			Dus de zonne-energie en andere groene energie gaan de toekomst worden ! 
 			Zonne-energie auto’s 
 			<br> <br>
+			<h3> Bij voertuigen </h3> <br><br>
 			De zonne-energie gaat zich ook uitbreiden tot betrekking van auto’s. Er zijn nu wel al zonnewagens. Maar dat kun je geen auto’s noemen. 
 			Er worden wel met deze zonnewagen races georganiseerd om het onderzoek naar zonne-energie te stimuleren. Een van de bekendste races is de World Solar Challenge en American Solar Challenge. <br> 
 			Nu even terug komen op de toekomst. De toekomst van auto op zonne-energie willen ze wel realiseren een bekend auto merk Tesla wil graag auto’s in de toekomst op zonne-energie laten werken.  Maar Lightyear is er al mee bezig om in 2019 de eerste gezinsauto op zonne-energie. Die zich voornamelijk met alleen zonlicht zich oplaad en dan af en toe nog met stroom. Het streven voor de toekomst is dat die helemaal zich kan opladen door de zonnepanelen. 
