fixed white line

--- a/rendement/index.html
+++ b/rendement/index.html
@@ -56,15 +56,13 @@
     </nav>
     <main id="content">
 	<div id="test">
-		<h2 id="titel">
-		Rendement van Zonne-energie
-		</h2>
+		<h2 id="titel">Rendement van Zonne-energie</h2>
 		<p>
-
-		Zit u te denken aan het plaatsen van zonnepanelen maar weet u niet zo zeker of het het wel waard is (in euro’s gesproken)? Daarvoor hebben wij hier voor u alle kosten en inkomsten op een rijtje gezet en kunt u het makkelijk zien en bereken zodat u een toekomstgerichte keuze kan maken en een investering in de toekomst doen, Op de groene en winstgevende manier. 
-
+        Zit u te denken aan het plaatsen van zonnepanelen maar weet u niet zo zeker of het het wel waard is (in euroï¿½s gesproken)? Daarvoor hebben wij hier voor u alle kosten en inkomsten op een rijtje gezet en kunt u het makkelijk zien en bereken zodat u een toekomstgerichte keuze kan maken en een investering in de toekomst doen, Op de groene en winstgevende manier. 
+        <br><br>
 		We nemen de 2 meest voorkomende soorten zonnepanelen in vergelijking, met elk zijn voordeel en nadelen.
-		Hiervoor hebben wij de kosten;
+        Hiervoor hebben wij de kosten;
+        </p>
 		<ul>
 			<li>Monokristallijn; zijn duurder, door de donkerblauwe kleur vinden mensen het de mooiste en hebben het hoogste rendement door de stabiele stroom (tijdens bewolking of temperatuur verschillen)</li>
 			<li>Polykristallijn; ten opzichte van monokristallijn leveren ze minder stroom per M2 , Ze zijn voor vele mensen door hun licht blauwe kleur lelijk maar zijn goedkoper dan Monokristallijn.</li>
@@ -72,67 +70,68 @@
 		<p>
 		Het verschil tussen de 2 is in Watt Piek (WP, Het hoogste Watt percentage per M2 ) klein. De Mono Kristallijne panelen zijn stabieler en daarom nemen we voor onze berekening ook die panelen.
 		<br><br>
-		Er is ook nog een soort paneel, alleen deze is totaal niet rendabel en zal geen winst leveren en zijn geld nooit terug verdienen. ‘Waarom kies je deze panelen dan?’ Omdat het Dummy Panelen zijn, die als een plek op je dak geen zon krijgt of te veel schaduw heeft waardoor het niet rendabel is, de leegtes op je dak kunnen vullen. Meestal heeft de producent zijn eigen Dummy Panelen om de kleur goed te matchen.
+		Er is ook nog een soort paneel, alleen deze is totaal niet rendabel en zal geen winst leveren en zijn geld nooit terug verdienen. ï¿½Waarom kies je deze panelen dan?ï¿½ Omdat het Dummy Panelen zijn, die als een plek op je dak geen zon krijgt of te veel schaduw heeft waardoor het niet rendabel is, de leegtes op je dak kunnen vullen. Meestal heeft de producent zijn eigen Dummy Panelen om de kleur goed te matchen.
 		<br><br>
 		Nu om alle kosten op 1 rijtje te zetten, De installatie van een minimale zonne-installatie bestaat uit:
 		</p>
 		<ul>
-		<li>De panelen</li>
-		<li>Een Omvormer (om gelijkstroom naar wisselstroom uit te zetten)</li>
-		<li>Een Meestal bij een omvormer inbegrepen Monitoringsprogramma</li>
-		</ul>
+		    <li>De panelen</li>
+		    <li>Een Omvormer (om gelijkstroom naar wisselstroom uit te zetten)</li>
+		    <li>Een Meestal bij een omvormer inbegrepen Monitoringsprogramma</li>
+		    </ul>
 		<p>
-		De omvormer heeft een levensspan van 10 a 15 jaar, dus deze gaat gemiddeld 12,5 jaar mee. De garantie is dan al verlopen en ben je met een installatie van 12 panelen al rond de 800 a 900 euro kwijt. Verder gaan de 12 panelen ongeveer 25 jaar mee, 12 nieuwe panelen (met de prijs van de dag van vandaag) is gemiddeld gezien (volgens de consumentenbond) 4000,- Euro, Installatiekosten inbegrepen. 
-
+        De omvormer heeft een levensspan van 10 a 15 jaar, dus deze gaat gemiddeld 12,5 jaar mee. De garantie is dan al verlopen en ben je met een installatie van 12 panelen al rond de 800 a 900 euro kwijt. Verder gaan de 12 panelen ongeveer 25 jaar mee, 12 nieuwe panelen (met de prijs van de dag van vandaag) is gemiddeld gezien (volgens de consumentenbond) 4000,- Euro, Installatiekosten inbegrepen. 
+        <br><br>
 		Dit komt in totaal uit op Per 25 jaar 5.700,- Euro. 
-		Die 5.700 Euro had je ook op de bank kunnen zetten (met de hoogste rente volgens spaarrente.nl) op een rentevast rekening met 2,00% van Centraal Beheer van 20 Jaar en daarna een spaardeposito van 5 jaar ook op 2,00%. Dat geeft als resultaat dat het (€5.700 X 1,0225) ˜ € 9351,45.
+		Die 5.700 Euro had je ook op de bank kunnen zetten (met de hoogste rente volgens spaarrente.nl) op een rentevast rekening met 2,00% van Centraal Beheer van 20 Jaar en daarna een spaardeposito van 5 jaar ook op 2,00%. Dat geeft als resultaat dat het (ï¿½5.700 X 1,0225) ï¿½ ï¿½ 9351,45.
 	 	Om kort samen te vatten
 		Per 25 jaar met een gemiddelde particuliere installatie van 12 panelen van 1,63 M2 en een omvormer met monitoringsprogramma (en inclusief als je het geld op een spaar deposito en rentevaste rekening van 2,00%) kom je uit op
-		€ 9.351,45
+		ï¿½ 9.351,45
 		</p>
-		<h2 id="titel">
-		Opbrengsten
-		</h2>
+		<h2 id="titel">Opbrengsten</h2>
 		<p>
 	 	Zonnepanelen maken van straling die de zon afgeeft energie, dit klinkt lastig en is ook    s 	wel duur maar over tijd kan het rendabel zijn, er hoeft niet eens perse altijd zon te  a a	zijn om de kosten te onderdrukken.
-
-		Ook hier gaan we nog steeds uit over een gemiddelde particuliere installatie van 12 panelen met 1 omvormer. De voordelen en zijn (in geld gezien) dat :
-
-			Kosten van energie onderdrukken en het terugleveren van stroom
-			Subsidies
-			Btw terugvragen 
-			Huiswaarde stijgt
- 	
-			 	Waardestijging 
+         <br><br>
+        Ook hier gaan we nog steeds uit over een gemiddelde particuliere installatie van 12 panelen met 1 omvormer. De voordelen en zijn (in geld gezien) dat :
+        </p>
+        <ul>
+            <li>Kosten van energie onderdrukken en het terugleveren van stroom</li>
+            <li>Subsidies</li>
+            <li>Btw terugvragen </li>
+            <li>Huiswaarde stijgt</li>
+        </ul>
+        <p>
+        <h3>Waardestijging</h3> 
+        <p>
 		De waardestijging van een huis wordt meestal vergeten bij het overwegen van         a	zonnepanelen, terwijl de stijging er zeker is, maar alleen lastig in te schatten.
-		Bij een onderzoek van degroenebron.nl hebben ze 92 mensen met panelen a	ondervraagd, bij wie ¾ van de mensen zeggen dat hun huis in waarde steeg, waarbij a 	van die 3 kwart ongeveer 70% zei dat hun huis of de waarde van de installatie of a	meer dan de waarde van de installatie heeft toegevoegd aan hun huis.
+		Bij een onderzoek van degroenebron.nl hebben ze 92 mensen met panelen a	ondervraagd, bij wie ï¿½ van de mensen zeggen dat hun huis in waarde steeg, waarbij a 	van die 3 kwart ongeveer 70% zei dat hun huis of de waarde van de installatie of a	meer dan de waarde van de installatie heeft toegevoegd aan hun huis.
 		Gemiddeld gezien is tussen de helft en de volledige waarde van het huis toegevoegd.
-		In ons geval van de 12 panelen is dat dan ongeveer (5.700 X 0.75) = €4.275,-
-			  	Subsidies en Btw
-		Als particulier kan je voor zonnepanelen de btw van de aanschaf én installatie (wat as s 	21% is) terugvragen bij de belastingdienst, hierover is er op milieucentraal.nl een sss	eenvoudige stappenplan zelf kan doen maar dit vereist wel dat je jezelf aanmeld als a	ondernemer. Ook zijn er genoeg kleine bedrijven die dit al te graag voor je willen  a a	doen, voor 100 a 150 euro. Iedereen kan dit zelf dus wij gaan ervanuit dat dit ook in a	uw geval lukt. (5.700  X 0,21) =€ 1.197,-
-
-
-			    	Zonne-Energie
+		In ons geval van de 12 panelen is dat dan ongeveer (5.700 X 0.75) = ï¿½4.275,-
+        
+        <h3>Subsidies en Btw</h3>
+        <p>Als particulier kan je voor zonnepanelen de btw van de aanschaf ï¿½n installatie (wat as s 	21% is) terugvragen bij de belastingdienst, hierover is er op milieucentraal.nl een sss	eenvoudige stappenplan zelf kan doen maar dit vereist wel dat je jezelf aanmeld als a	ondernemer. Ook zijn er genoeg kleine bedrijven die dit al te graag voor je willen  a a	doen, voor 100 a 150 euro. Iedereen kan dit zelf dus wij gaan ervanuit dat dit ook in a	uw geval lukt. (5.700  X 0,21) =ï¿½ 1.197,-</p>
+        
+        <h3>Zonne-Energie</h3>
+        <p>
 		Dan komen we nu aan bij de zonne-energie.  De hoeveelheid zonne-energie wordt bepaald door de hoek van de paneel, Het vermogen, welke kant het paneel naar wijst (waarbij zuid het best is), het soort paneel (in dit geval een monokristallijn paneel) en de hoeveelheid van de panelen, In dit geval 12.
 		Voor deze berekening gaan we ervan uit dat we een plat dak hebben waar de zonnepanelen schuin richting het zuiden staan.
 		De gemiddelde opbrengst van deze monokristallijn panelen is per paneel per jaar tussen de 225 en 270 KwH, ligt aan hoe het jaar qua weer was. 
 		Er vanuit gaande dat het stroom 19,90 Cent kost (van Nuon) bespaar je per paneel per jaar (19,9 Cent X 247,5 kWH) dan kom je uit op ongeveer 50 euro per paneel per jaar.
-		Doe dat keer 12 en dan zit je toch wel op €600,- per jaar voor de 12 panelen.
+		Doe dat keer 12 en dan zit je toch wel op ï¿½600,- per jaar voor de 12 panelen.
 
 			 	Uitgerekend kom je na 25 jaar zonne energie uit op:
-		€4.275,-
-		€1.197,-
-		(€600,- X 25 Jaar)
+		ï¿½4.275,-
+		ï¿½1.197,-
+		(ï¿½600,- X 25 Jaar)
 		------------------------- +
-		+ € 20.472,-
+		+ ï¿½ 20.472,-
 
 
-		En stel je had €5.700,- op een deposito gezet dan had je maar  € 9.351,45
-
-		https://www.consumentenbond.nl/zonnepanelen/kiezen?icmp=primarybutton_dossierhome_zonnepanelen_bekijk%20het%20koopadvies – Consumentenbond Zonnepanelen
-		https://www.spaarrente.nl/spaardeposito.aspx?spaarvorm=spaardeposito – Spaardeposito rente
-		https://degroenebron.nl/blog/waardestijging-eigen-huis-door-zonnepanelen/ - Huis-Waardestijging
-		</p>
+        En stel je had ï¿½5.700,- op een deposito gezet dan had je maar  ï¿½ 9.351,45
+        </p>
+		<a href="https://www.consumentenbond.nl/zonnepanelen/kiezen?icmp=primarybutton_dossierhome_zonnepanelen_bekijk%20het%20koopadvies">Consumentenbond Zonnepanelen</a>
+		<a href="https://www.spaarrente.nl/spaardeposito.aspx?spaarvorm=spaardeposito">Spaardeposito rente</a>
+		<a href="https://degroenebron.nl/blog/waardestijging-eigen-huis-door-zonnepanelen">Huis-Waardestijging</a>
 	</div>
     </main>
     <footer id="footer">
