--- a/rendement/index.html
+++ b/rendement/index.html
@@ -63,7 +63,7 @@
 		We nemen de 2 meest voorkomende soorten zonnepanelen in vergelijking, met elk zijn voordeel en nadelen.
         Hiervoor hebben wij de kosten;
         </p>
-		<ul>
+		<ul class="ul">
 			<li>Monokristallijn; zijn duurder, door de donkerblauwe kleur vinden mensen het de mooiste en hebben het hoogste rendement door de stabiele stroom (tijdens bewolking of temperatuur verschillen)</li>
 			<li>Polykristallijn; ten opzichte van monokristallijn leveren ze minder stroom per M2 , Ze zijn voor vele mensen door hun licht blauwe kleur lelijk maar zijn goedkoper dan Monokristallijn.</li>
 		</ul>
@@ -74,7 +74,7 @@
 		<br><br>
 		Nu om alle kosten op 1 rijtje te zetten, De installatie van een minimale zonne-installatie bestaat uit:
 		</p>
-		<ul>
+		<ul class="ul">
 		    <li>De panelen</li>
 		    <li>Een Omvormer (om gelijkstroom naar wisselstroom uit te zetten)</li>
 		    <li>Een Meestal bij een omvormer inbegrepen Monitoringsprogramma</li>
@@ -94,7 +94,7 @@
          <br><br>
         Ook hier gaan we nog steeds uit over een gemiddelde particuliere installatie van 12 panelen met 1 omvormer. De voordelen en zijn (in geld gezien) dat :
         </p>
-        <ul>
+        <ul class="ul">
             <li>Kosten van energie onderdrukken en het terugleveren van stroom</li>
             <li>Subsidies</li>
             <li>Btw terugvragen </li>
