--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 	<div id="Uitleg">
         <p>Duurzame energie op de huidige markt bestaat vooral, maar is niet gelimiteerd tot deze:</p>
-        <ul id="ul">
+        <ul class="ul">
             <li>Wind Kracht centrales</li>
             <li>Geothermische centrales</li>
             <li>zonne-energie</li>
