--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             <img class="desktop"src="img/header-desk.jpg">
         </header>
 	<div id="inleiding">
+		<br>
+		<h2> Is duurzame Energie de Toekomst? </h2>
 		<p>Volgens veel critici zou de wereld door onze eigen fouten en uitputting van de aarde vergaan of tenminste ons ras uitsterven.
 		Er zijn veel oplossingen, maar niemand weet de perfecte. Duurzame energie zal al een hele stap de goede richting zijn.
 		Omdat je energie gebruikt die geen CO2 die diep in de aarde zit weer naar boven haalt en het "huidige" broeikast effect dat "nu al erg aan het stijgen is" verder stimuleren.
