--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <li>zonne-energie</li>
             <li>Zeestromingscentrales</li>
             <li>Waterkracht centrales</li>
-            <li>Brandstof uit de door de mens geplante planten (zoals biodiesel</li>
+            <li>Brandstof uit de door de mens geplante planten (zoals biodiesel)</li>
         </ul>
         <p>
 		Aangezien de enige grote particuliere sector de zonne-energie is, gaan we voor zonne-energie.
