fixed current price and fixed scroll

--- a/rendement/index.html
+++ b/rendement/index.html
@@ -135,7 +135,7 @@
         En stel je had €5.700,- op een deposito gezet dan had je maar  €9.351,45
         </p>
         <h3>Bronnen:</h3>
-        <ul>
+        <ul class="ul">
             <li><a href="https://www.consumentenbond.nl/zonnepanelen/kiezen?icmp=primarybutton_dossierhome_zonnepanelen_bekijk%20het%20koopadvies">Consumentenbond Zonnepanelen</a></li>
             <li><a href="https://www.spaarrente.nl/spaardeposito.aspx?spaarvorm=spaardeposito">Spaardeposito rente</a></li>
             <li><a href="https://degroenebron.nl/blog/waardestijging-eigen-huis-door-zonnepanelen">Huis-Waardestijging</a></li>
