--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="oscarrijpstra.nl">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
+            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
             <span>2018</span>
         </div>
     </footer>
