--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
             <img class="desktop"src="img/header-desk.jpg">
         </header>
 	<div id="inleiding">
-		<br>
 		<h2> Is duurzame Energie de Toekomst? </h2>
 		<p>Volgens veel critici zou de wereld door onze eigen fouten en uitputting van de aarde vergaan of tenminste ons ras uitsterven.
 		Er zijn veel oplossingen, maar niemand weet de perfecte. Duurzame energie zal al een hele stap de goede richting zijn.
@@ -90,14 +89,16 @@
             <li>Waterkracht centrales</li>
             <li>Brandstof uit de door de mens geplante planten (zoals biodiesel)</li>
         </ul>
-		<h3> Zonne-Energie </h3> <p>
-		Aangezien de enige grote particuliere sector de zonne-energie is, gaan we voor zonne-energie.
-		Op deze website zou je informatie kunnen vinden voor zonne-energie en het aanleggen van zonnepanelen, vooral de kosten en opbrengsten.
-		We kijken niet naar de positieve veranderingen in de natuur maar naar het rendement van de panelen en ook of het het wel waard is in de huidige markt.
-		Met een toekomst verwachting of het nog in de toekomst te doen is.<br><br>
-		Op het moment is er een positieve stijging in de markt van zonnepanelen en is er een soort van "hype" er omheen.
-		Deze hype is, als je kijkt naar de overheid, erg gestimuleerd. Vooral door de overheid. Maar is deze markt nog wel zo rendabel als het lijkt?
-		<br> Wij zochten het uit en kwamen tot 1 conclusie.
+        <h3> Zonne-Energie </h3>
+            <p>Aangezien de enige grote particuliere sector de zonne-energie is, gaan we voor zonne-energie.
+		    Op deze website zou je informatie kunnen vinden voor zonne-energie en het aanleggen van zonnepanelen, vooral de kosten en opbrengsten.
+		    We kijken niet naar de positieve veranderingen in de natuur maar naar het rendement van de panelen en ook of het het wel waard is in de huidige markt.
+            Met een toekomst verwachting of het nog in de toekomst te doen is.
+            <br><br>
+		    Op het moment is er een positieve stijging in de markt van zonnepanelen en is er een soort van "hype" er omheen.
+		    Deze hype is, als je kijkt naar de overheid, erg gestimuleerd. Vooral door de overheid. Maar is deze markt nog wel zo rendabel als het lijkt?
+        <br>
+        Wij zochten het uit en kwamen tot 1 conclusie.
 		</p>
 	</div>
     </main>
